--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.4",
+    "express": "^4.15.3",
     "nodemon": "^1.11.0",
     "twitter": "^1.7.1"
   }
